# embedded-firmware-lib

./: .gitignore  AGENTS.md  AI_DEBUG_EFFECTIVENESS_REPORT.md  AI_DEBUG_EXTENSION_TEST_REPORT.md  AI_DEBUG_GUIDE.md  AI_DEBUG_PROMPT.md  AI_DEBUG_TEST_RESULTS.md  BUG_INJECTION_COMPLETE.md  BUG_INJECTION_REPORT.md  CMakeLists.txt  FINAL_REPORT.md  Jenkinsfile  README.md  SKILLS.md  TEST_RESULTS.md  ai-debug.sh  build.sh  inject_bugs.sh  main.c  main.cpp
.github/workflows/: ci.yml
docs/: ARCHITECTURE_DESIGN.md  CODING_GUIDELINES.md  CODING_GUIDELINES_CPP.md  COMPLETION_REPORT.md  Doxyfile.in  architecture.md  folder-structure-proposal.md  index.rst  jenkins-setup-guide.md  raspberry-pi-3b-jenkins-complete-guide.md  raspberry-pi-jenkins-setup.md
docs/api/: README.md  api_layer.md  architecture.md  index.rst  mcal.md  middleware.md  services.md  types.md
docs/architecture/: index.rst
docs/diagrams/: index.rst
docs/diagrams/classes/: icrypto_algorithm.puml  icrypto_service.puml  ihsm_api.puml  ikeystore_service.puml  isession_manager.puml
docs/diagrams/components/: component_architecture.puml
docs/diagrams/sequences/: encrypt_flow.puml  key_import_flow.puml
docs/tests/: coverage_report.rst  index.rst  test_cases_api.rst  test_cases_crypto.rst  test_cases_keystore.rst  test_cases_session.rst  test_integration.rst
include/: aes128_algorithm.hpp  aes256_algorithm.hpp  common.hpp  crypto_service.hpp  hsm_api_impl.hpp  icrypto_algorithm.hpp  icrypto_service.hpp  ihsm_api.hpp  ikeystore_service.hpp  isession_manager.hpp  iuart.hpp  key_slot.hpp  keystore_service.hpp  session_manager.hpp  uart_stub.hpp
include/ehsm/: ehsm_api.h  ehsm_crypto.h  ehsm_keystore.h  ehsm_mcal_uart.h  ehsm_middleware.h  ehsm_storage.h  ehsm_types.h
include/ehsm/api/: hsm_api_impl.hpp  ihsm_api.hpp
include/ehsm/mcal/: iuart.hpp  uart_stub.hpp
include/ehsm/middleware/: isession_manager.hpp  session_manager.hpp
include/ehsm/services/: icrypto_service.hpp  ikeystore_service.hpp  keystore_service.hpp
include/ehsm/services/crypto/: aes128_algorithm.hpp  aes256_algorithm.hpp  crypto_service.hpp  icrypto_algorithm.hpp
include/ehsm/types/: algorithm.hpp  key_slot.hpp  status.hpp
include/hsm/: hsm_api.h  hsm_crypto_service.h  hsm_keystore.h  hsm_middleware.h  hsm_storage_driver.h  hsm_types.h  mcal_uart.h
src/api/: CMakeLists.txt  ehsm_api.c  hsm_api.c  hsm_api_impl.cpp
src/drivers/: CMakeLists.txt  ehsm_storage_driver.c  hsm_storage_driver.c
src/mcal/: CMakeLists.txt  mcal_uart.c
src/mcal/uart/: mcal_uart_stub.c
src/middleware/: CMakeLists.txt  ehsm_middleware.c  hsm_middleware.c  session_manager.cpp
src/services/: CMakeLists.txt  ehsm_crypto.c  ehsm_keystore.c  hsm_crypto_service.c  hsm_keystore.c  keystore_service.cpp
src/services/crypto/: aes128_algorithm.cpp  aes256_algorithm.cpp  crypto_service.cpp
src/stubs/: ehsm_mcal_uart_stub.c  mcal_uart_stub.c
src/types/: status.cpp
tests/: CMakeLists.txt
tests/integration/: test_integration.cpp
tests/mocks/: mock_services.hpp
tests/unit/: test_aes_algorithms.cpp  test_api_layer.cpp  test_crypto_service.c  test_crypto_service.cpp  test_keystore.c  test_keystore_service.cpp  test_session_manager.cpp
